err/pyphp.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyphp'...
Compiling './lib/python3.5/site-packages/pyphp/compiler.py'...
***   File "./lib/python3.5/site-packages/pyphp/compiler.py", line 107
    print "%s%s"%("  "*self.indent, tok)
               ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyphp/executer.py'...
***   File "./lib/python3.5/site-packages/pyphp/executer.py", line 44
    print "\n%s: %s"%(prefix, msg)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyphp/parser.py'...
***   File "./lib/python3.5/site-packages/pyphp/parser.py", line 124
    print ParseError("", self)
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyphp/phpbuiltins.py'...
***   File "./lib/python3.5/site-packages/pyphp/phpbuiltins.py", line 75
    print "%sNULL"%dstr
                 ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyphp/phpclass.py'...
***   File "./lib/python3.5/site-packages/pyphp/phpclass.py", line 38
    print "Called %s with %r"%(self, args)
                            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/pyphp/pyphp.py'...
***   File "./lib/python3.5/site-packages/pyphp/pyphp.py", line 38
    print "Unknown option %s"%arg
                            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyphp/trace.py'...
***   File "./lib/python3.5/site-packages/pyphp/trace.py", line 38
    print pre_tt % pdata
               ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/pyphp/varref.py'...
***   File "./lib/python3.5/site-packages/pyphp/varref.py", line 28
    print "Getting context of %r"%self
                                ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/pyphp-0.1.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
